--- a/index.html
+++ b/index.html
@@ -58,16 +58,30 @@
     }
     .btn {
       display: inline-block;
-      margin-top: 20px;
-      padding: 12px 25px;
+      margin-top: 15px;
+      padding: 10px 20px;
       border: 2px solid #39ff14;
       color: #39ff14;
       text-decoration: none;
       border-radius: 30px;
       transition: 0.3s;
+      font-size: 0.9rem;
+      cursor: pointer;
     }
     .btn:hover {
       background: #39ff14;
+      color: black;
+    }
+    /* Special style for the primary download button */
+    .btn-primary {
+      background: #39ff14;
+      color: black;
+      font-weight: bold;
+      margin-right: 10px;
+    }
+    .btn-primary:hover {
+      background: white;
+      border-color: white;
       color: black;
     }
     section {
@@ -83,7 +97,7 @@
     }
     .projects {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
       gap: 25px;
     }
     .card {
@@ -95,6 +109,9 @@
       transition: transform 0.3s, opacity 1s ease;
       opacity: 0;
       transform: translateY(20px);
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
     }
     .card h3 {
       margin-bottom: 10px;
@@ -104,6 +121,7 @@
     .card p, .card .tech {
       font-size: 0.95rem;
       color: white;
+      margin-bottom: 10px;
     }
     .fade-in {
       opacity: 1 !important;
@@ -228,7 +246,15 @@
       }
     });
 
+    // Updated Project List with CyberTrack at the top
     const projects = [
+      {
+        "name": "CyberTrack - macOS Security Auditor",
+        "description": "Automated security tool. Scans Firewall, Gatekeeper, FileVault, and Open Ports. Packaged as a standalone executable CLI.",
+        "tech": "Python, Rich Library, Socket, PyInstaller",
+        "url": "https://github.com/TanakaShumba/CyberTrack",
+        "download": "https://github.com/TanakaShumba/CyberTrack/releases/latest"
+      },
       {"name":"python-network-scanner","description":"Python project for network scanning","tech":"Python","url":"https://github.com/TanakaShumba/python-network-scanner"},
       {"name":"automated-vulnerability-scanner","description":"Parses mock Nmap JSON results, maps services/ports to CVE database.","tech":"Python","url":"https://github.com/TanakaShumba/automated-vulnerability-scanner"},
       {"name":"siem-log-parser","description":"Analyze and interpret logs from SIEM systems.","tech":"Python","url":"https://github.com/TanakaShumba/siem-log-parser"},
@@ -252,14 +278,27 @@
     ];
 
     const container = document.getElementById("projects-container");
+    
     projects.forEach((repo, index) => {
       const card = document.createElement("div");
       card.className = "card";
+      
+      // LOGIC: If the project has a 'download' link, show two buttons. Otherwise, just GitHub.
+      let buttonsHtml = "";
+      if (repo.download) {
+        buttonsHtml = `
+          <a class="btn btn-primary" href="${repo.download}" target="_blank">Download App</a>
+          <a class="btn" href="${repo.url}" target="_blank">View Source</a>
+        `;
+      } else {
+        buttonsHtml = `<a class="btn" href="${repo.url}" target="_blank">View on GitHub</a>`;
+      }
+
       card.innerHTML = `
         <h3>${repo.name}</h3>
         <p>${repo.description}</p>
         <div class="tech">Tech/Tools: ${repo.tech}</div>
-        <a class="btn" href="${repo.url}" target="_blank">View on GitHub</a>
+        <div style="margin-top:auto;">${buttonsHtml}</div>
       `;
       container.appendChild(card);
       setTimeout(() => card.classList.add("fade-in"), 200 * index);
@@ -267,6 +306,3 @@
   </script>
 </body>
 </html>
-<!-- rebuild trigger -->
-<!-- rebuild trigger -->
-<!-- rebuild trigger Mon Oct 20 15:57:17 CDT 2025 -->
