Fixed missing description for CyberTrack

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     nav a:hover {
       color: white;
     }
+    /* Buttons */
     .btn {
       display: inline-block;
       margin-top: 15px;
@@ -118,10 +119,17 @@
       font-size: 1.3rem;
       color: #39ff14;
     }
-    .card p, .card .tech {
+    .card p {
       font-size: 0.95rem;
       color: white;
-      margin-bottom: 10px;
+      margin-bottom: 15px;
+      line-height: 1.4;
+    }
+    .card .tech {
+      font-size: 0.85rem;
+      color: #ddd;
+      margin-bottom: 15px;
+      font-style: italic;
     }
     .fade-in {
       opacity: 1 !important;
@@ -251,7 +259,7 @@
       {
         "name": "CyberTrack - macOS Security Auditor",
         "description": "Automated security tool. Scans Firewall, Gatekeeper, FileVault, and Open Ports. Packaged as a standalone executable CLI.",
-        "tech": "Python, Rich Library, Socket, PyInstaller",
+        "tech": "Python, Rich, Socket, PyInstaller",
         "url": "https://github.com/TanakaShumba/CyberTrack",
         "download": "https://github.com/TanakaShumba/CyberTrack/releases/latest"
       },
