Fixed broken MediChat link

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
         "description": "Multilingual Patient Intake System. Translates 20+ languages instantly, uses clinical logic to assess risk, and generates digital tickets.",
         "tech": "Python, Streamlit, Pandas, Deep-Translator",
         "url": "https://github.com/TanakaShumba/MediChat",
-        "download": "https://tanakashumba-medichat.streamlit.app",
+        "download": "https://medichat-jtpygclbxqkgaatirfnwum.streamlit.app/",
         "type": "web"
       },
       {
