Added Sub-Sniper to portfolio

--- a/index.html
+++ b/index.html
@@ -257,6 +257,13 @@
     // Updated Project List with MediChat and CyberTrack at the top
     const projects = [
       {
+        "name": "Sub-Sniper - Bug Bounty Bot",
+        "description": "Offensive Security tool. Uses AsyncIO to scan 500+ subdomains/minute for Takeover vulnerabilities.",
+        "tech": "Python, Aiohttp, AsyncIO, Requests",
+        "url": "https://github.com/TanakaShumba/SubSniper",
+        "download": "",
+        "type": "code"
+      },      {
         "name": "MediChat - Universal AI Triage",
         "description": "Multilingual Patient Intake System. Translates 20+ languages instantly, uses clinical logic to assess risk, and generates digital tickets.",
         "tech": "Python, Streamlit, Pandas, Deep-Translator",
